z-index corrected

--- a/frontend/src/components/ProfilePicUpdate.scss
+++ b/frontend/src/components/ProfilePicUpdate.scss
@@ -6,6 +6,7 @@
   background: #fff;
   padding: 2rem;
   border-radius: 20px;
+  z-index: 12;
 }
 
 .profile-update-bg {
@@ -16,6 +17,7 @@
   height: 100%;
   background-color: #000;
   opacity: 0.5;
+  z-index: 11;
 }
 
 .update-pic {
